--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0",
-        "symfony/thanks": "^1.0"
+        "symfony/thanks": "^1.0",
+        "heroku/heroku-buildpack-php": "*"
     },
     "autoload": {
         "classmap": [
@@ -47,6 +48,9 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
+        ],
+        "compile": [
+            "bower install"
         ]
     },
     "config": {
