--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
         "jquery": "^3.2",
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
-        "vue": "^2.5.7"
+        "vue": "^2.5.7",
+    },
+    "dependencies": {
+        "bower": "~1.3.3",
     }
 }
