--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "~1.0",
         "phpunit/phpunit": "~6.0",
-        "symfony/thanks": "^1.0",
-        "heroku/heroku-buildpack-php": "*"
+        "symfony/thanks": "^1.0"
     },
     "autoload": {
         "classmap": [
@@ -48,9 +47,6 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
-        ],
-        "compile": [
-            "bower install"
         ]
     },
     "config": {
