--- a/public/.htaccess
+++ b/public/.htaccess
@@ -24,7 +24,7 @@
 # Alternatively you could only whitelist your
 # subdomains like "subdomain.example.com".
 <IfModule mod_headers.c>
-  <FilesMatch "\.(ttf|ttc|otf|eot|woff|font.css|css)$">
+  <FilesMatch "\.(ttf|ttc|otf|eot|woff|woff2|font.css|css)$">
     Header set Access-Control-Allow-Origin "*"
   </FilesMatch>
 </IfModule>
